src/Juegardos.Website/wwwroot/css/app.css
/* ... */
    .ad .ad-300x600 {
        width: 300px;
        height: 600px;
    }

    .ad .ad-728x90 {
        width: 728px;
        height: 90px;
        object-position: 0 -250px;
    }

    .ad .ad-970x90 {
        width: 970px;
        height: 90px;
    }

/* GAMES */

.game-card {
    display: inline-block;
    position: relative;
    height: 140px;
    width: 250px;
    cursor: pointer;
    background-image: linear-gradient(var(--invisible), #0f0f0f);
    border-radius: 4px;
    overflow: hidden;
}

    .game-card > img {
        height: 100%;
        width: 100%;
        -webkit-mask-image: -webkit-gradient(linear, left top, left bottom, from(rgba(0,0,0,1)), to(rgb(0 0 0 / 30%)));
        border-radius: 4px;
        transition: transform .5s ease;
    }

    .game-card > h5 {
        position: absolute;
        left: 10px;
        bottom: 10px;
    }

    .game-card > i {
        position: absolute;
        right: 10px;
        top: 10px;
    }
   
    .game-card:hover img {
        transform: scale(1.5);
    }


.gameplay-main-container {
    display: flex;
    justify-content: center;
}

.gameplay-main-container > .ad {
    margin: 0 40px;
    display: none;
}

.game-with-ad {
    display: flex;
    flex-direction: column;
    justify-content: space-between;
}

    .game-with-ad > .ad {
        margin: 40px 0;
    }

@media (min-width: 1440px) {
    .gameplay-main-container > .ad {
        display: block;
    }
}

.gameplay-title {
    text-align: center;
    margin: 20px;
}

.gameplay-container {
    display: block;
    width: fit-content;
}

.gameplay-box {
    height: 640px;
    width: 970px;
    border: solid black 1px;   
}

.gameplay-box > img {
    width: 100%;
    height: 100%;
}

.gameplay-box-bar {
    display: flex;
    justify-content: space-around;
    align-items: center;
    height: 80px;
    border-radius: 0 0 20.8px 20.8px;
    background-color: var(--primary-normal);
}

.gameplay-box-bar i {
    font-size: 40px;
}

    .gameplay-box-bar i:hover {
        cursor: pointer;
    }

.outstanding-game-card {
    position: relative;
    background-image: linear-gradient(var(--invisible), #0f0f0f);
}

    .outstanding-game-card > img {
        width: 100%;
        height: 100%;
        -webkit-mask-image: -webkit-gradient(linear, left top, left bottom, from(rgba(0,0,0,1)), to(rgb(0 0 0 / 30%)));
    }

    .outstanding-game-details {
        position: absolute;
        left: 5%;
        bottom: 5%;
    }

        .outstanding-game-details > * {
            margin-bottom: 5px;
        }

        .outstanding-game-details > h1 {
            font-size: 30px;
            line-height: initial;
        }

        .outstanding-game-details > h4 {
            font-size: 14px;
            line-height: initial;
        }

        .outstanding-game-details > div.outstanding-buttons {
            display: flex;
        }

            .outstanding-game-details > div.outstanding-buttons > *:first-child {
                margin-right: 5px;
            }

@media (min-width: 768px) {
    .outstanding-game-card {
        height: 75vh;
    }

    .outstanding-game-details > h1 {
        font-size: 46px;
    }

    .outstanding-game-details > h4 {
        font-size: 18px;
    }

    .outstanding-game-details > div.outstanding-buttons > *:first-child {
        margin-right: 10px;
    }
}

/* SEARCH PAGE */

.search-container {
    max-width: 800px;
    margin: 40px 10px;
}

    .search-container > * {
        margin: 20px 10px;
    }

    .search-container > .search-title {
        text-align: center;
    }

    .search-container > .search-filters {
        display: flex;
        justify-content: space-between;
    }

    .search-container > .search-filters > .search-filter {
        width: 30%;
    }

    .search-container > .search-filters > .search-filter > label {
        display: block;
        margin-bottom: 5px;
    }

.search-games-container {
    display: grid;
    align-content: center;
    grid-template-columns: auto;
    gap: 10px;
    justify-content: center;
}

.search-games-container > * {
    margin: 10px;
}


@media (min-width: 768px) {
    .search-container {
        margin: 40px auto;
    }

    .search-games-container {
        grid-template-columns: auto auto;
    }
}

@media (min-width: 1024px) {
    .search-games-container {
        grid-template-columns: auto auto auto;
    }
}

@media (min-width: 1440px) {
    .search-games-container {
        grid-template-columns: auto auto auto auto;
    }
}

@media (min-width: 1440px) {
    .search-games-container {
        grid-template-columns: auto auto auto auto;
    }
}

.game-modal > div.game-modal-play {
    display: flex;
    justify-content: center;
    margin: 20px;
}

.game-modal h3 {
    margin-bottom: 20px;
}

.game-modal h5 {
    margin-bottom: 10px;
}

.game-modal p {
    margin-bottom: 20px;
}

    .game-modal .carousel .carousel-posters .carousel-poster:first-child,
    .game-modal .carousel .carousel-title {
        margin-left: 0;
    }

    .game-modal .game-modal-video {
        position: relative;
    }

    .game-modal .game-modal-video > i {
        position: absolute;
        top: 10px;
        right: 10px;
        padding: 10px;
        cursor: pointer;
    }

    .game-modal .game-modal-info {
        padding: 1rem;
    }

    .game-modal .video {
        position: relative;
        -webkit-mask-image: -webkit-linear-gradient(top, rgba(255, 255, 255, 1) 0%, rgba(255, 255, 255, 1) 90%, rgba(255, 255, 255, 0) 100%);
    }

@media (min-width: 768px) {
    .game-modal .game-modal-info .game-modal-info-details {
        display: flex;
    }

    .game-modal-info-details > p {
        margin-right: 30px;
        text-align: justify;
    }

    .game-modal-info-details > div {
        min-width: 180px;
    }
}

/* ACCOUNT PAGE */
.my-account-main {
    display: flex;
    justify-content: center;
    height: calc(100vh - 90px);
}
/* ... */

